--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GOOGLE_CLIENT_ID="41025513367-h390hl8ooaa782a3cpjkigst4a6mj5p8.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 # FIREBASe_API="AIzaSyDsVcT58u5fnibQqpN2sX_OEggbFp0bYqs"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://master--relaxed-cobbler-6bd2bc.netlify.app"
 NEXTAUTH_SECRET=""test""
