test auth deploy

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-GOOGLE_CLIENT_ID="648550380360-ngs7ksmfsp7us4nokegjbv9n9k5ieart.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
-FIREBASe_API="AIzaSyDsVcT58u5fnibQqpN2sX_OEggbFp0bYqs"
-NEXTAUTH_URL="https://master--relaxed-cobbler-6bd2bc.netlify.app"
-NEXTAUTH_URL="https://foody-liard.vercel.app"
+GOOGLE_CLIENT_ID=648550380360-ngs7ksmfsp7us4nokegjbv9n9k5ieart.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+FIREBASe_API=AIzaSyDsVcT58u5fnibQqpN2sX_OEggbFp0bYqs
+# NEXTAUTH_URL="https://master--relaxed-cobbler-6bd2bc.netlify.app"
+# NEXTAUTH_URL="https://foody-liard.vercel.app"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="test"
 # key="AIzaSyBjSx1YWYd62jDWNfdyg45XVcqwvoDeERM"
+JWT_SECRET=43d8c40440644b35beb60529b7e14667
